--- a/LibraryManagementSystem.csproj
+++ b/LibraryManagementSystem.csproj
@@ -9,12 +9,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Assets\" />
     <Folder Include="ViewModels\" />
-    <Folder Include="Pages\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="EntityFramework" Version="6.5.1" />
+    <PackageReference Include="LiveCharts.Wpf" Version="0.9.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.0">
